Fix floating refine on mobile

--- a/src/assets/css/search.css
+++ b/src/assets/css/search.css
@@ -347,18 +347,79 @@ a:hover.tooltips span {
 }
 
 .bg-svg-icon-flag {
-  margin-top: -6px;
-  margin-right: -4px;
-  height: 20px;
-  width: 20px;
-  float: left;
-  background-color: #f0efef;
+  padding: 5px;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
+  font-family: 'Font Awesome 5 Pro';
+  font-weight: 500;
+  font-size: 13px;
   border-radius: 50%;
+  background-color: #f0efef;
+  margin-top: -10px;
+  border: none;
+  margin-right: 10px;
+  cursor: pointer;
 }
-
+.bg-svg-icon-flag:before {
+  content: "\f024";
+}
 .bg-svg-icon-flag:hover {
+  color: #FFFFFF;
   background-color: #AAAAAA;
 }
+
+.bg-svg-icon-plus {
+  padding: 5px;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
+  font-family: 'Font Awesome 5 Pro';
+  font-weight: 500;
+  font-size: 13px;
+  border-radius: 50%;
+  background-color: #f0efef;
+  margin-top: -10px;
+  border: none;
+  margin-right: 10px;
+  cursor: pointer;
+}
+.bg-svg-icon-plus:before {
+  content: "\f055";
+}
+.bg-svg-icon-plus:hover {
+  color: #FFFFFF;
+  background-color: #AAAAAA;
+}
+
+.bg-svg-icon-reading-time {
+  background-color: transparent;
+  padding: 5px;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
+  font-family: 'Font Awesome 5 Pro';
+  font-weight: 500;
+  font-size: 13px;
+  border-radius: 50%;
+  margin-top: -10px;
+  border: none;
+  cursor: pointer;
+  color: #3098d4;
+}
+.bg-svg-icon-reading-time:before {
+  content: "\f017";
+}
+
 
 .bg-svg-icon-like {
   margin-top: 1px;
@@ -966,7 +1027,7 @@ fieldset[disabled] .btn-popapply.active {
 }
 
 .item-title-search {
-  height: 30px;
+  height: fit-content;
   /* float: right; */
   font-family: "Raleway";
   font-size: 17px;
@@ -982,7 +1043,7 @@ fieldset[disabled] .btn-popapply.active {
 
 .item-content-title {
   width: 95%;
-  height: 35px;
+  height: fit-content;
   margin: 0px 0px 0px 10px;
 }
 
@@ -1026,7 +1087,7 @@ fieldset[disabled] .btn-popapply.active {
   font-weight: 600;
   letter-spacing: 0rem;
   line-height: 11px;
-  margin-top: 11px;
+  margin-top: 20px;
 }
 
 .icon-item-flag {
@@ -1772,7 +1833,7 @@ span.textbutton {
   align-content: center;
   float: right;
   left: -430px;
-  top: 550px;
+  top: 45vh;
 }
 
 .footer-style {
@@ -1974,7 +2035,8 @@ span.textbutton {
   }
 
   .item-content-readingtime {
-    margin-top: 20px;
+    height: 13px;
+    margin-top: 12px;
 }
 
 
